// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`GOLDEN: bias correction + confidence weighting quality_score with confidence weighting enabled (mixed confidence) 1`] = `
{
  "avgWithinCategoryStdDev": 5,
  "categoryAverages": {
    "coding": 80,
    "creative": 55,
    "knowledge": 70,
    "math": 90,
    "reasoning": 65,
  },
  "categoryConfidence": {
    "coding": 0.95,
    "creative": 0.3,
    "knowledge": 0.6,
    "math": 0.6,
    "reasoning": 0.6,
  },
  "confidenceWeighted": true,
  "consistencyBonus": 5,
  "coverage": 100,
  "coveragePenalty": 0,
  "difficultyCoverage": 100,
  "difficultyPenalty": 0,
  "evidenceConfidence": 0.68,
  "evidenceConfidencePenalty": 0,
  "evidenceConfidenceTarget": 0.75,
  "evidenceStatus": "full_scope",
  "fullScopeEligible": true,
  "fullScopeMinLevel": 4,
  "generalistScore": 56.3,
  "maxPromptLevel": 5,
  "minConsistencyResults": 42,
  "minFullScopeResults": 28,
  "missingRequiredLevelsByCategory": {},
  "requiredPromptLevels": [
    4,
    5,
  ],
  "testedCategories": 5,
  "totalScoredResults": 60,
  "weightedSum": 51.3,
}
`;

exports[`GOLDEN: bias correction + confidence weighting quality_score with per-category bias correction enabled 1`] = `
{
  "avgWithinCategoryStdDev": 5,
  "categoryAverages": {
    "coding": 86.1,
    "creative": 55.4,
    "knowledge": 72.2,
    "math": 80,
    "reasoning": 67.8,
  },
  "categoryConfidence": null,
  "confidenceWeighted": false,
  "consistencyBonus": 5,
  "coverage": 100,
  "coveragePenalty": 0,
  "difficultyCoverage": 100,
  "difficultyPenalty": 0,
  "evidenceConfidence": 0.9,
  "evidenceConfidencePenalty": 0,
  "evidenceConfidenceTarget": 0.75,
  "evidenceStatus": "full_scope",
  "fullScopeEligible": true,
  "fullScopeMinLevel": 4,
  "generalistScore": 80.2,
  "maxPromptLevel": 5,
  "minConsistencyResults": 42,
  "minFullScopeResults": 28,
  "missingRequiredLevelsByCategory": {},
  "requiredPromptLevels": [
    4,
    5,
  ],
  "testedCategories": 5,
  "totalScoredResults": 60,
  "weightedSum": 75.2,
}
`;

exports[`GOLDEN: calculateGeneralistScoreFromCategories — every axis composite_score axis (headline/elite, 0-100 native) — full hard-scope 1`] = `
{
  "avgWithinCategoryStdDev": 5,
  "categoryAverages": {
    "coding": 80,
    "creative": 55,
    "knowledge": 70,
    "math": 90,
    "reasoning": 65,
  },
  "categoryConfidence": null,
  "confidenceWeighted": false,
  "consistencyBonus": 5,
  "coverage": 100,
  "coveragePenalty": 0,
  "difficultyCoverage": 100,
  "difficultyPenalty": 0,
  "evidenceConfidence": 0.9,
  "evidenceConfidencePenalty": 0,
  "evidenceConfidenceTarget": 0.75,
  "evidenceStatus": "full_scope",
  "fullScopeEligible": true,
  "fullScopeMinLevel": 4,
  "generalistScore": 79.3,
  "maxPromptLevel": 5,
  "minConsistencyResults": 42,
  "minFullScopeResults": 28,
  "missingRequiredLevelsByCategory": {},
  "requiredPromptLevels": [
    4,
    5,
  ],
  "testedCategories": 5,
  "totalScoredResults": 60,
  "weightedSum": 74.3,
}
`;

exports[`GOLDEN: calculateGeneralistScoreFromCategories — every axis deterministic_score axis — full hard-scope coverage (defaults) 1`] = `
{
  "avgWithinCategoryStdDev": 5,
  "categoryAverages": {
    "coding": 80,
    "creative": 55,
    "knowledge": 70,
    "math": 90,
    "reasoning": 65,
  },
  "categoryConfidence": null,
  "confidenceWeighted": false,
  "consistencyBonus": 5,
  "coverage": 100,
  "coveragePenalty": 0,
  "difficultyCoverage": 100,
  "difficultyPenalty": 0,
  "evidenceConfidence": 0.9,
  "evidenceConfidencePenalty": 0,
  "evidenceConfidenceTarget": 0.75,
  "evidenceStatus": "full_scope",
  "fullScopeEligible": true,
  "fullScopeMinLevel": 4,
  "generalistScore": 79.3,
  "maxPromptLevel": 5,
  "minConsistencyResults": 42,
  "minFullScopeResults": 28,
  "missingRequiredLevelsByCategory": {},
  "requiredPromptLevels": [
    4,
    5,
  ],
  "testedCategories": 5,
  "totalScoredResults": 60,
  "weightedSum": 74.3,
}
`;

exports[`GOLDEN: calculateGeneralistScoreFromCategories — every axis quality_score axis — full hard-scope coverage (defaults) 1`] = `
{
  "avgWithinCategoryStdDev": 5,
  "categoryAverages": {
    "coding": 80,
    "creative": 55,
    "knowledge": 70,
    "math": 90,
    "reasoning": 65,
  },
  "categoryConfidence": null,
  "confidenceWeighted": false,
  "consistencyBonus": 5,
  "coverage": 100,
  "coveragePenalty": 0,
  "difficultyCoverage": 100,
  "difficultyPenalty": 0,
  "evidenceConfidence": 0.9,
  "evidenceConfidencePenalty": 0,
  "evidenceConfidenceTarget": 0.75,
  "evidenceStatus": "full_scope",
  "fullScopeEligible": true,
  "fullScopeMinLevel": 4,
  "generalistScore": 79.3,
  "maxPromptLevel": 5,
  "minConsistencyResults": 42,
  "minFullScopeResults": 28,
  "missingRequiredLevelsByCategory": {},
  "requiredPromptLevels": [
    4,
    5,
  ],
  "testedCategories": 5,
  "totalScoredResults": 60,
  "weightedSum": 74.3,
}
`;

exports[`GOLDEN: calculateGeneralistScoreFromCategories — every axis subjective_score axis — full hard-scope coverage (defaults) 1`] = `
{
  "avgWithinCategoryStdDev": 5,
  "categoryAverages": {
    "coding": 80,
    "creative": 55,
    "knowledge": 70,
    "math": 90,
    "reasoning": 65,
  },
  "categoryConfidence": null,
  "confidenceWeighted": false,
  "consistencyBonus": 5,
  "coverage": 100,
  "coveragePenalty": 0,
  "difficultyCoverage": 100,
  "difficultyPenalty": 0,
  "evidenceConfidence": 0.9,
  "evidenceConfidencePenalty": 0,
  "evidenceConfidenceTarget": 0.75,
  "evidenceStatus": "full_scope",
  "fullScopeEligible": true,
  "fullScopeMinLevel": 4,
  "generalistScore": 79.3,
  "maxPromptLevel": 5,
  "minConsistencyResults": 42,
  "minFullScopeResults": 28,
  "missingRequiredLevelsByCategory": {},
  "requiredPromptLevels": [
    4,
    5,
  ],
  "testedCategories": 5,
  "totalScoredResults": 60,
  "weightedSum": 74.3,
}
`;

exports[`GOLDEN: edge cases empty category map returns zeroed breakdown 1`] = `
{
  "avgWithinCategoryStdDev": 0,
  "categoryAverages": {
    "coding": 0,
    "creative": 0,
    "knowledge": 0,
    "math": 0,
    "reasoning": 0,
  },
  "categoryConfidence": null,
  "confidenceWeighted": false,
  "consistencyBonus": 0,
  "coverage": 0,
  "coveragePenalty": 20,
  "difficultyCoverage": null,
  "difficultyPenalty": 0,
  "evidenceConfidence": null,
  "evidenceConfidencePenalty": 0,
  "evidenceConfidenceTarget": 0.75,
  "evidenceStatus": "partial_scope",
  "fullScopeEligible": false,
  "fullScopeMinLevel": 4,
  "generalistScore": 0,
  "maxPromptLevel": null,
  "minConsistencyResults": 42,
  "minFullScopeResults": 28,
  "missingRequiredLevelsByCategory": {},
  "requiredPromptLevels": [
    4,
    5,
  ],
  "testedCategories": 0,
  "totalScoredResults": 0,
  "weightedSum": 0,
}
`;

exports[`GOLDEN: edge cases null weights returns zeroed breakdown 1`] = `
{
  "avgWithinCategoryStdDev": 0,
  "categoryAverages": {},
  "categoryConfidence": null,
  "confidenceWeighted": false,
  "consistencyBonus": 0,
  "coverage": 0,
  "coveragePenalty": 0,
  "difficultyCoverage": null,
  "difficultyPenalty": 0,
  "evidenceConfidence": null,
  "evidenceConfidencePenalty": 0,
  "evidenceConfidenceTarget": 0.75,
  "evidenceStatus": "partial_scope",
  "fullScopeEligible": false,
  "fullScopeMinLevel": 4,
  "generalistScore": 0,
  "maxPromptLevel": null,
  "minConsistencyResults": 42,
  "minFullScopeResults": 28,
  "missingRequiredLevelsByCategory": {},
  "requiredPromptLevels": [
    4,
    5,
  ],
  "testedCategories": 0,
  "totalScoredResults": 3,
  "weightedSum": 0,
}
`;

exports[`GOLDEN: penalties coverage penalty — only 2 of 5 categories tested 1`] = `
{
  "avgWithinCategoryStdDev": 5,
  "categoryAverages": {
    "coding": 80,
    "creative": 0,
    "knowledge": 0,
    "math": 0,
    "reasoning": 70,
  },
  "categoryConfidence": null,
  "confidenceWeighted": false,
  "consistencyBonus": 0,
  "coverage": 40,
  "coveragePenalty": 9,
  "difficultyCoverage": 55,
  "difficultyPenalty": 9,
  "evidenceConfidence": 0.5,
  "evidenceConfidencePenalty": 2.7,
  "evidenceConfidenceTarget": 0.75,
  "evidenceStatus": "partial_scope",
  "fullScopeEligible": false,
  "fullScopeMinLevel": 4,
  "generalistScore": 54.8,
  "maxPromptLevel": 5,
  "minConsistencyResults": 42,
  "minFullScopeResults": 28,
  "missingRequiredLevelsByCategory": {},
  "requiredPromptLevels": [
    4,
    5,
  ],
  "testedCategories": 2,
  "totalScoredResults": 24,
  "weightedSum": 75.5,
}
`;

exports[`GOLDEN: penalties difficulty penalty — full category coverage but only L1/L2 evidence 1`] = `
{
  "avgWithinCategoryStdDev": 5,
  "categoryAverages": {
    "coding": 80,
    "creative": 80,
    "knowledge": 80,
    "math": 80,
    "reasoning": 80,
  },
  "categoryConfidence": null,
  "confidenceWeighted": false,
  "consistencyBonus": 5,
  "coverage": 100,
  "coveragePenalty": 0,
  "difficultyCoverage": 0,
  "difficultyPenalty": 20,
  "evidenceConfidence": 0.5,
  "evidenceConfidencePenalty": 2.7,
  "evidenceConfidenceTarget": 0.75,
  "evidenceStatus": "partial_scope",
  "fullScopeEligible": false,
  "fullScopeMinLevel": 4,
  "generalistScore": 62.3,
  "maxPromptLevel": 2,
  "minConsistencyResults": 42,
  "minFullScopeResults": 28,
  "missingRequiredLevelsByCategory": {
    "coding": [
      4,
      5,
    ],
    "creative": [
      4,
      5,
    ],
    "knowledge": [
      4,
      5,
    ],
    "math": [
      4,
      5,
    ],
    "reasoning": [
      4,
      5,
    ],
  },
  "requiredPromptLevels": [
    4,
    5,
  ],
  "testedCategories": 5,
  "totalScoredResults": 60,
  "weightedSum": 80,
}
`;

exports[`GOLDEN: penalties evidence-confidence penalty — avg confidence below target (defaults) 1`] = `
{
  "avgWithinCategoryStdDev": 5,
  "categoryAverages": {
    "coding": 80,
    "creative": 55,
    "knowledge": 70,
    "math": 90,
    "reasoning": 65,
  },
  "categoryConfidence": null,
  "confidenceWeighted": false,
  "consistencyBonus": 5,
  "coverage": 100,
  "coveragePenalty": 0,
  "difficultyCoverage": 100,
  "difficultyPenalty": 0,
  "evidenceConfidence": 0.5,
  "evidenceConfidencePenalty": 2.7,
  "evidenceConfidenceTarget": 0.75,
  "evidenceStatus": "full_scope",
  "fullScopeEligible": true,
  "fullScopeMinLevel": 4,
  "generalistScore": 76.6,
  "maxPromptLevel": 5,
  "minConsistencyResults": 42,
  "minFullScopeResults": 28,
  "missingRequiredLevelsByCategory": {},
  "requiredPromptLevels": [
    4,
    5,
  ],
  "testedCategories": 5,
  "totalScoredResults": 100,
  "weightedSum": 74.3,
}
`;

exports[`GOLDEN: penalties infra/judge-failed category is exempt from coverage penalty 1`] = `
{
  "avgWithinCategoryStdDev": 5,
  "categoryAverages": {
    "coding": 80,
    "creative": 60,
    "knowledge": 70,
    "math": 0,
    "reasoning": 70,
  },
  "categoryConfidence": null,
  "confidenceWeighted": false,
  "consistencyBonus": 5,
  "coverage": 100,
  "coveragePenalty": 0,
  "difficultyCoverage": 80,
  "difficultyPenalty": 4,
  "evidenceConfidence": 0.5,
  "evidenceConfidencePenalty": 2.7,
  "evidenceConfidenceTarget": 0.75,
  "evidenceStatus": "partial_scope",
  "fullScopeEligible": false,
  "fullScopeMinLevel": 4,
  "generalistScore": 70.8,
  "maxPromptLevel": 5,
  "minConsistencyResults": 42,
  "minFullScopeResults": 28,
  "missingRequiredLevelsByCategory": {},
  "requiredPromptLevels": [
    4,
    5,
  ],
  "testedCategories": 5,
  "totalScoredResults": 48,
  "weightedSum": 72.5,
}
`;
